--- a/GestionDePublicidad/src/main/resources/templates/tablaTrabajadores.html
+++ b/GestionDePublicidad/src/main/resources/templates/tablaTrabajadores.html
@@ -125,11 +125,11 @@
               <td>
                 <a th:href="@{admin/modificarTrabajador/__${trabajador.id}__}">
                   <button type="submit"><img
-                      src="/GestionDePublicidad/src/main/resources/static/img/botones/Magic Wand_Lineal-coloured.png"></button>
+                      src="/img/botones/Magic Wand_Lineal-coloured.png"></button>
                 </a>
                 <a th:href="@{admin/eliminarTrabajador/__${trabajador.id}__}">
                   <button type="submit"><img
-                      src="/GestionDePublicidad/src/main/resources/static/img/botones/Dustbin_Flat.png"></button>
+                      src="/img/botones/Dustbin_Flat.png"></button>
                 </a>
               </td>           
              </tr>
